name: progressive-overload-cli
version: 0.1.0.0
synopsis: A tool for helping you program your workouts.
license:  MIT
license-file: LICENSE
author: Simon Swanson
maintainer: nomiswanson@gmail.com
homepage: https://github.com/swanysimon/progressive-overload-cli

cabal-version: >=1.10
build-type: Simple

extra-source-files:
    ChangeLog.md
    README.md

executable progressive-overload-cli
    main-is: Main.hs
    default-language: Haskell2010
    build-depends:
        base == 4.10.1.0
    hs-source-dirs:
        bin
        src
    other-modules:
        Training.Exercise
        Training.Repetitions
        Training.Set
        Training.Units
        Training.Weight
        Training.WorkingSet
        Training.Workout

test-suite tests
    type: exitcode-stdio-1.0
    main-is: TestRunner.hs
    default-language: Haskell2010
    build-depends:
        base == 4.10.1.0,
        hspec == 2.4.7,
        random == 1.1
    hs-source-dirs:
        src
        test-src
    other-modules:
        Training.Exercise
        Training.Repetitions
        Training.Set
        Training.Units
        Training.Weight
        Training.WeightTests
        Training.WorkingSet
        Training.Workout

